add context for token fetch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,6 +86,7 @@ workflows:
            requires:
              - bootstrap
       - verify_schema:
+           context: org-global
            requires:
              - bootstrap
       - test:
