--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 parameters:
-  is-approval-workflow:
+  run-tests:
     type: boolean
     default: false
 
@@ -38,7 +38,7 @@ jobs:
                   curl -X POST https://circleci.com/api/v2/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/pipeline \
                   --header "Circle-Token: $CIRCLE_TOKEN" \
                   --header "content-type: application/json" \
-                  --data '{"branch":"main","parameters":{"is-approval-workflow":true}}'
+                  --data '{"branch":"main","parameters":{"run-tests":true}}'
               else
                   echo "File does not exist."
               fi
@@ -79,7 +79,7 @@ workflows:
     when:
       and:
         - equal: [main, << pipeline.git.branch >>]
-        - equal: [false, << pipeline.parameters.is-approval-workflow >>]
+        - equal: [false, << pipeline.parameters.run-tests >>]
     jobs:
       - bootstrap
       - static_analysis:
@@ -105,7 +105,7 @@ workflows:
     when:
       and:
         - equal: [main, << pipeline.git.branch >>]
-        - equal: [true, << pipeline.parameters.is-approval-workflow >>]
+        - equal: [true, << pipeline.parameters.run-tests >>]
     jobs:
       - verify_schema_state
       - approval_job:
